added unit test cases